# quantumEngine

./: .gitignore  CMakeLists.txt  NOTES.txt  README.md  ROADMAP.txt
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  main.cpp  triangle_mesh.cpp  triangle_mesh.h
src/app/graphicsSource/openGL/: CMakeLists.txt  qOpenGL.cpp  qOpenGL.h
src/app/graphicsSource/openGL/dependencies/glad/include/glad/: glad.h
src/app/graphicsSource/openGL/dependencies/glad/src/: glad.c
src/app/shaders/: vertex.txt
src/core/lib/qFile/: CMakeLists.txt  qFile.cpp  qFile.h  unitTests.cpp
src/core/lib/qLinMat/: CMakeLists.txt  qLinMat.hpp  qMat.cpp  qMat.h  qVec.cpp  qVec.h  unitTests.cpp  unitTestsqMat.cpp  unitTestsqVec.cpp
src/core/lib/qMat/: CMakeLists.txt  qMat.cpp  qMat.h
src/core/lib/qMesh/: CMakeLists.txt  qMesh.cpp  qMesh.h  unitTests.cpp
src/core/lib/qVec/: CMakeLists.txt  qVec.cpp  qVec.h
src/core/qVec/: CMakeLists.txt  main.cpp
src/core/qVec/lib/: CMakeLists.txt  qVec.cpp  qVec.h
